--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,2 @@
-SLACK_WEBHOOK_URL = "https://hooks.slack.com/services/xxx/xxx/xxx"
-TARGET_URL = "https://example.com"
+export SLACK_WEBHOOK_URL="https://hooks.slack.com/services/xxx/xxx/xxx"
+export TARGET_URL="https://example.com"
